# Claude-Code-Hackathon

./: README.md  prompt.txt
apps/api/: .env.example  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py
apps/api/app/routers/: activity.py  auth.py  coach.py  fridge.py  grocery.py  integrations.py  recommendations.py  user.py
apps/api/app/schemas/: __init__.py  common.py
apps/api/app/services/: __init__.py  activity.py  coach.py  fridge.py  recommendations.py  store.py
apps/mobile/: app.json  package.json
apps/mobile/app/: _layout.tsx
apps/mobile/app/(tabs)/: _layout.tsx  activity.tsx  coach.tsx  fridge.tsx  grocery.tsx  index.tsx  nearby.tsx  profile.tsx
apps/mobile/components/: Pill.tsx  RecommendationCard.tsx  ScreenShell.tsx  SectionCard.tsx  StatCard.tsx
apps/mobile/lib/: api.ts  mock.ts  theme.ts  types.ts
beat-app/: .env.example  .gitignore  APP_FEATURES_OVERVIEW.md  README.md  index.html  package-lock.json  package.json
beat-app/docs/: activity-strava.md  home-nearby-map.md
beat-app/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
beat-app/src/components/: Layout.tsx  RequireAuth.tsx
beat-app/src/contexts/: AuthContext.tsx
beat-app/src/lib/: config.ts
beat-app/src/pages/: Activity.tsx  Coach.tsx  Eat.tsx  FridgeScan.tsx  Groceries.tsx  Home.tsx  Login.tsx  SceneScan.tsx  Settings.tsx
beat-app/src/services/: beatContext.ts  google.test.ts  google.ts  groceries.ts  openai.ts  strava.test.ts  strava.ts  types.ts
docs/: architecture.md
