[project]
name = "roamwell-api"
version = "0.1.0"
description = "FastAPI backend for the RoamWell hackathon MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
]

[tool.uv]
dev-dependencies = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
